--- a/RazorPagesMiniProject/RazorPagesMiniProject.csproj
+++ b/RazorPagesMiniProject/RazorPagesMiniProject.csproj
@@ -9,4 +9,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.22" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="DemoLibrary">
+      <HintPath>DemoLibrary.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
